test/tests/stages/18_structures/invalid_parse/extra_credit/case_struct_decl.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[30]:
  int
  identifier(main)
  (
  void
  )
  {
  switch
  (
  const int(0)
  )
  {
  case
  const int(0)
  :
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  return
  const int(0)
  ;
  }
  return
  const int(0)
  ;
  }
